# tavily-register

./: .bandit  .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_EN.md  TEST_COVERAGE_ENHANCEMENT_SUMMARY.md  VALIDATION_REPORT.md  api_keys.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml  test-distribution.yml
docs/: README.md  api.md  changelog.md  index.md  index.zh.md  installation.md  troubleshooting.md  usage.md
docs/api/: core.md  index.md
docs/assets/javascripts/: custom.js  mathjax.js
docs/assets/stylesheets/: extra.css
docs/development/: index.md  release-process.md
docs/examples/: index.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/troubleshooting/: index.md
docs/user-guide/: index.md
examples/: README.md
scripts/: README.md  build.py  release.py  setup.py  setup_docs.py  version.py
src/: README.md
src/tavily_register/: __init__.py  main.py
src/tavily_register/config/: __init__.py  settings.py
src/tavily_register/core/: __init__.py  intelligent_automation.py  traditional_automation.py
src/tavily_register/email/: __init__.py  checker.py  login_helper.py
src/tavily_register/utils/: __init__.py  helpers.py
tests/: README.md  __init__.py  run_comprehensive_tests.py  test_main.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_basic_workflow.py  test_traditional_workflow.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_config.py  test_email_checker.py  test_email_login_helper.py  test_intelligent_automation.py  test_main_controller.py  test_traditional_automation.py  test_utils.py
